# basis-aware-threshold

./: README.md  pyproject.toml
fig/: tern.pgf
scripts/: compute_mauve.py  generate.py  param_matching.py  relative_conserve.py  unit_test.py
scripts/viz/: fig1.py  hrr.py  relcon.py  relcon_by_cons.py  tern.py  test.py  unit_test.py
src/: lp.py  parallel.py  strats.py
