[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "basis-aware-sampling"
dependencies = [
  "cvxpy",
  "numpy",
  "transformers",
  "jax",
  "flax",
  "jaxlib",
  "torch",
  "diskcache",
  "pandas",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
